fix overflow issue

--- a/portfolio/src/styles/global.scss
+++ b/portfolio/src/styles/global.scss
@@ -16,6 +16,8 @@ html {
             display: block;
             padding: 2rem 2rem;
 
+            overflow-wrap: break-word;
+
             @include mq(md) {
                 padding: 2rem 4rem;
             }
